--- a/fog-off/package.json
+++ b/fog-off/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fog-off",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
   "scripts": {
@@ -77,5 +77,14 @@
       "ios",
       "android"
     ]
+  },
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/minxmin99/CS275-Final-Project.git"
+  },
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/minxmin99/CS275-Final-Project/issues"
   }
 }
