--- a/fog-off/package.json
+++ b/fog-off/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --proxy-config proxyconfig.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -26,7 +26,8 @@
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^4.7.1",
-    "cordova-android": "^6.4.0",
+    "@ionic/storage": "^2.2.0",
+    "cordova-android": "^8.0.0",
     "cordova-browser": "6.0.0",
     "cordova-ios": "^5.0.1",
     "cordova-plugin-geolocation": "^4.0.2",
@@ -46,7 +47,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
-    "@ionic/angular-toolkit": "~2.0.0",
+    "@ionic/angular-toolkit": "^2.0.0",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
@@ -91,5 +92,11 @@
       "browser",
       "android"
     ]
-  }
+  },
+  "main": "karma.conf.js",
+  "directories": {
+    "test": "test"
+  },
+  "keywords": [],
+  "license": "ISC"
 }
